--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head> 
 	<meta charset="UTF-8" />
 	<title>Bioship</title>
-    <script src="//cdn.jsdelivr.net/phaser/2.6.2/phaser.min.js"></script>
+    <script src="./phaser/phaser.min.js"></script>
     <style type="text/css">
         body {
             margin: 0;
@@ -14,6 +14,8 @@
 
 <script type="text/javascript" src="./src/strings.js"></script>
 <script type="text/javascript" src="./src/gs.js"></script>
+<script type="text/javascript" src="./src/biome.js"></script>
+<script type="text/javascript" src="./src/niche.js"></script>
 <script type="text/javascript" src="./src/tileMan.js"></script>
 <script type="text/javascript" src="./src/uiMan.js"></script>
 <script type="text/javascript" src="./src/states.js"></script>
