--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <script type="text/javascript" src="./src/strings.js"></script>
 <script type="text/javascript" src="./src/gs.js"></script>
+<script type="text/javascript" src="./src/events.js"></script>
 <script type="text/javascript" src="./src/biome.js"></script>
 <script type="text/javascript" src="./src/niche.js"></script>
 <script type="text/javascript" src="./src/tileMan.js"></script>
