--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head> 
 	<meta charset="UTF-8" />
 	<title>Bioship</title>
-    <script src="./phaser/phaser.min.js"></script>
+//    <script src="./phaser/phaser.min.js"></script>
+    <script src="//cdn.jsdelivr.net/phaser/2.6.2/phaser.min.js"></script>
+
     <style type="text/css">
         body {
             margin: 0;
