--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 <body>
 
+<script type="text/javascript" src="./src/vanilla-to-platform-min.js"></script>
 <script type="text/javascript" src="./src/strings.js"></script>
 <script type="text/javascript" src="./src/gs.js"></script>
 <script type="text/javascript" src="./src/events.js"></script>
