--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head> 
 	<meta charset="UTF-8" />
 	<title>Bioship</title>
-    <!-- script src="./phaser/phaser.min.js"></script -->
+    <!--script src="./phaser/phaser.min.js"></script-->
     <script src="//cdn.jsdelivr.net/phaser/2.6.2/phaser.min.js"></script>
 
     <style type="text/css">
@@ -22,7 +22,9 @@
 <script type="text/javascript" src="./src/niche.js"></script>
 <script type="text/javascript" src="./src/tileMan.js"></script>
 <script type="text/javascript" src="./src/uiMan.js"></script>
+<script type="text/javascript" src="./src/uiManHelper.js"></script>
 <script type="text/javascript" src="./src/states.js"></script>
+<script type="text/javascript" src="./src/statesTutorial.js"></script>
 <script type="text/javascript" src="./src/main.js"></script>
 
 </body>
