--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en"> 
 <head> 
 	<meta charset="UTF-8" />
-	<title>Bioship</title>
+	<title>Project E.G.G.</title>
     <!--script src="./phaser/phaser.min.js"></script-->
 	    <script src="//cdn.jsdelivr.net/phaser/2.6.2/phaser.min.js"></script>
 
